--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StoryTom - Digital Marketing & DevOps Solutions | Buffalo, NY</title>
+    <title>Tom Story Consulting - Digital Marketing & DevOps Solutions | Buffalo, NY</title>
     
     <!-- Styles -->
     <link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@
     <!-- Header -->
     <header class="header">
         <nav class="nav-container">
-            <div class="logo">StoryTom</div>
+            <div class="logo">Tom Story</div>
             <div class="nav-links">
                 <a href="#services">Services</a>
                 <a href="#marketing">Digital Marketing</a>
@@ -97,7 +97,7 @@
     <footer class="footer">
         <div class="footer-grid">
             <div class="footer-info">
-                <h3>StoryTom</h3>
+                <h3>Tom Story</h3>
                 <p>Digital Marketing & DevOps Solutions</p>
                 <p>Buffalo, NY</p>
             </div>
@@ -115,11 +115,11 @@
             </div>
             <div class="footer-contact">
                 <h4>Contact</h4>
-                <a href="mailto:contact@storytom.com">contact@storytom.com</a>
+                <a href="mailto:contact@storytom.com">Thomasstory716@hotmail.com</a>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 StoryTom. All rights reserved.</p>
+            <p>&copy; 2025 StoryTom. Buffalo New York.</p>
         </div>
     </footer>
 
