--- a/index.html
+++ b/index.html
@@ -14,15 +14,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Construction Banner -->
+    <div class="alert-banner">
+        🚧 Site Under Construction - Beta Version 1.0 🚧
+    </div>
+
     <!-- Header -->
     <header class="header">
         <nav class="nav-container">
-            <div class="logo">Tom Story</div>
+            <div class="logo">Tom Story Consulting</div>
             <div class="nav-links">
                 <a href="#services">Services</a>
                 <a href="#marketing">Digital Marketing</a>
                 <a href="#devops">DevOps</a>
-                <button class="cta-button">Free Consultation</button>
+                <button class="cta-button">Free Consultation <span class="beta-label">beta</span></button>
             </div>
         </nav>
     </header>
@@ -31,10 +36,10 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Want More Traffic & Sales?</h1>
-            <p>Join 1,000+ businesses in Buffalo that use StoryTom to get more traffic and sales</p>
+            <p>Join 1,000+ businesses in Buffalo that use Tom Story Consulting to get more traffic and sales</p>
             <div class="hero-buttons">
-                <button class="primary-button">Get My Free Analysis →</button>
-                <button class="secondary-button">Watch How It Works</button>
+                <button class="primary-button">Get My Free Analysis <span class="beta-label">beta</span></button>
+                <button class="secondary-button">Watch How It Works <span class="beta-label">beta</span></button>
             </div>
         </div>
     </section>
@@ -52,7 +57,7 @@
             </div>
             <div class="stat-card">
                 <div class="stat-number">$2.4M+</div>
-                <p>Revenue Generated</p>
+                <p>Revenue Generated for Clients</p>
             </div>
         </div>
     </section>
@@ -66,19 +71,19 @@
                 <div class="service-icon">📈</div>
                 <h3>SEO Optimization</h3>
                 <p>Dominate search rankings with our proven SEO strategies and content optimization.</p>
-                <a href="#" class="learn-more">Learn More →</a>
+                <a href="#" class="learn-more">Learn More <span class="beta-label">beta</span></a>
             </div>
             <div class="service-card">
                 <div class="service-icon">🔄</div>
                 <h3>DevOps Solutions</h3>
                 <p>Streamline your development process with automated deployment and scaling.</p>
-                <a href="#" class="learn-more">Learn More →</a>
+                <a href="#" class="learn-more">Learn More <span class="beta-label">beta</span></a>
             </div>
             <div class="service-card">
                 <div class="service-icon">📊</div>
                 <h3>Digital Marketing</h3>
                 <p>Drive results with data-driven marketing campaigns and analytics.</p>
-                <a href="#" class="learn-more">Learn More →</a>
+                <a href="#" class="learn-more">Learn More <span class="beta-label">beta</span></a>
             </div>
         </div>
     </section>
@@ -89,7 +94,7 @@
         <p>Schedule a free consultation to see how we can help you increase traffic and revenue</p>
         <form class="contact-form">
             <input type="email" placeholder="Enter your email">
-            <button type="submit" class="primary-button">Get Started</button>
+            <button type="submit" class="primary-button">Get Started <span class="beta-label">beta</span></button>
         </form>
     </section>
 
@@ -97,7 +102,7 @@
     <footer class="footer">
         <div class="footer-grid">
             <div class="footer-info">
-                <h3>Tom Story</h3>
+                <h3>Tom Story Consulting</h3>
                 <p>Digital Marketing & DevOps Solutions</p>
                 <p>Buffalo, NY</p>
             </div>
@@ -115,11 +120,11 @@
             </div>
             <div class="footer-contact">
                 <h4>Contact</h4>
-                <a href="mailto:contact@storytom.com">Thomasstory716@hotmail.com</a>
+                <a href="mailto:ThomasStory716@hotmail.com" class="contact-email">ThomasStory716@hotmail.com</a>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 StoryTom. Buffalo New York.</p>
+            <p>&copy; 2024 Tom Story Consulting. All rights reserved.</p>
         </div>
     </footer>
 
