--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Tom Story Consulting. All rights reserved.</p>
+            <p>&copy; 2025 Tom Story Consulting. A.I. Wrote this Page!.</p>
         </div>
     </footer>
 
