--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tom Story Consulting - Digital Marketing & DevOps Solutions | Buffalo, NY</title>
+    <title>Tom Story Consulting-Digital Marketing & DevOps Solutions | Buffalo, NY</title>
     
     <!-- Styles -->
     <link rel="stylesheet" href="style.css">
@@ -14,11 +14,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Construction Banner -->
-    <div class="alert-banner">
-        🚧 Site Under Construction - Beta Version 1.0 🚧
-    </div>
-
     <!-- Header -->
     <header class="header">
         <nav class="nav-container">
@@ -27,7 +22,7 @@
                 <a href="#services">Services</a>
                 <a href="#marketing">Digital Marketing</a>
                 <a href="#devops">DevOps</a>
-                <button class="cta-button">Free Consultation <span class="beta-label">beta</span></button>
+                <button class="cta-button">$99 Consultation</button>
             </div>
         </nav>
     </header>
@@ -36,10 +31,10 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Want More Traffic & Sales?</h1>
-            <p>Join 1,000+ businesses in Buffalo that use Tom Story Consulting to get more traffic and sales</p>
+            <p>Join 1,000+ businesses in Buffalo that use StoryTom to get more traffic and sales</p>
             <div class="hero-buttons">
-                <button class="primary-button">Get My Free Analysis <span class="beta-label">beta</span></button>
-                <button class="secondary-button">Watch How It Works <span class="beta-label">beta</span></button>
+                <button class="primary-button">Get My Analysis for $99 →</button>
+                <button class="secondary-button">Watch How It Works</button>
             </div>
         </div>
     </section>
@@ -57,7 +52,7 @@
             </div>
             <div class="stat-card">
                 <div class="stat-number">$2.4M+</div>
-                <p>Revenue Generated for Clients</p>
+                <p>Revenue Generated</p>
             </div>
         </div>
     </section>
@@ -71,19 +66,19 @@
                 <div class="service-icon">📈</div>
                 <h3>SEO Optimization</h3>
                 <p>Dominate search rankings with our proven SEO strategies and content optimization.</p>
-                <a href="#" class="learn-more">Learn More <span class="beta-label">beta</span></a>
+                <a href="#" class="learn-more">Learn More →</a>
             </div>
             <div class="service-card">
                 <div class="service-icon">🔄</div>
                 <h3>DevOps Solutions</h3>
                 <p>Streamline your development process with automated deployment and scaling.</p>
-                <a href="#" class="learn-more">Learn More <span class="beta-label">beta</span></a>
+                <a href="#" class="learn-more">Learn More →</a>
             </div>
             <div class="service-card">
                 <div class="service-icon">📊</div>
                 <h3>Digital Marketing</h3>
                 <p>Drive results with data-driven marketing campaigns and analytics.</p>
-                <a href="#" class="learn-more">Learn More <span class="beta-label">beta</span></a>
+                <a href="#" class="learn-more">Learn More →</a>
             </div>
         </div>
     </section>
@@ -92,9 +87,9 @@
     <section class="cta-section">
         <h2>Ready to Grow Your Business?</h2>
         <p>Schedule a free consultation to see how we can help you increase traffic and revenue</p>
-        <form class="contact-form">
+        <form class="Get a Digital Road Map">
             <input type="email" placeholder="Enter your email">
-            <button type="submit" class="primary-button">Get Started <span class="beta-label">beta</span></button>
+            <button type="submit" class="primary-button">Get Started</button>
         </form>
     </section>
 
@@ -102,7 +97,7 @@
     <footer class="footer">
         <div class="footer-grid">
             <div class="footer-info">
-                <h3>Tom Story Consulting</h3>
+                <h3>Tom Story</h3>
                 <p>Digital Marketing & DevOps Solutions</p>
                 <p>Buffalo, NY</p>
             </div>
@@ -115,16 +110,15 @@
             <div class="footer-links">
                 <h4>Company</h4>
                 <a href="#about">About</a>
-                <a href="#careers">Careers</a>
                 <a href="#contact">Contact</a>
             </div>
             <div class="footer-contact">
                 <h4>Contact</h4>
-                <a href="mailto:ThomasStory716@hotmail.com" class="contact-email">ThomasStory716@hotmail.com</a>
+                <a href="mailto:contact@storytom.com">contact@storytom.com</a>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Tom Story Consulting. A.I. Wrote this Page!.</p>
+            <p>&copy; 2025 StoryTom.com All rights reserved.</p>
         </div>
     </footer>
 
