--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
             <div class="footer-contact">
                 <h4>Contact</h4>
-                <a href="mailto:contact@storytom.com">contact@storytom.com</a>
+                <a href="mailto:Thomasstory716@hotmail.com">Thomasstory716@hotmail.com</a>
             </div>
         </div>
         <div class="footer-bottom">
