--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <h1>Want More Traffic & Sales?</h1>
-            <p>Join 1,000+ businesses in Buffalo that use StoryTom to get more traffic and sales</p>
+            <h1>Be Seen Online! Want More Traffic & Sales?</h1>
+            <p>Join Many businesses in Buffalo that use StoryTom to get more traffic and sales</p>
             <div class="hero-buttons">
                 <button class="primary-button">Get My Analysis for $99 →</button>
                 <button class="secondary-button">Watch How It Works</button>
@@ -86,7 +86,7 @@
     <!-- CTA Section -->
     <section class="cta-section">
         <h2>Ready to Grow Your Business?</h2>
-        <p>Schedule a free consultation to see how we can help you increase traffic and revenue</p>
+        <p>Schedule a $99 consultation to see how we can help you increase traffic and revenue</p>
         <form class="Get a Digital Road Map">
             <input type="email" placeholder="Enter your email">
             <button type="submit" class="primary-button">Get Started</button>
