--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="alert-banner">
+    🚧 Site Under Construction - Beta Version 1.0 🚧
+</div>
     <!-- Header -->
     <header class="header">
         <nav class="nav-container">
